@@ -1,3 +1,7 @@
+2008-09-15  TOKI Yoshinori  <toki@freedom.ne.jp>
+
+	* lib/gluon/controller.rb: gluon controller syntax changed.
+
 2008-09-14  TOKI Yoshinori  <toki@freedom.ne.jp>
 
 	* lib/gluon/action.rb, lib/gluon/controller.rb: explicit
